WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
312101
[css-mixins-1] Fix cycle detection and nested function calls
https://bugs.webkit.org/show_bug.cgi?id=312101
Summary
[css-mixins-1] Fix cycle detection and nested function calls
Antti Koivisto
Reported
2026-04-12 10:36:42 PDT
Fixes
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-04-12 10:36:55 PDT
<
rdar://problem/174609179
>
Antti Koivisto
Comment 2
2026-04-12 10:53:31 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/62595
EWS
Comment 3
2026-04-14 00:08:09 PDT
Committed
311178@main
(9df4aed36a6c): <
https://commits.webkit.org/311178@main
> Reviewed commits have been landed. Closing PR #62595 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug