[css-mixins-1] Fix cycle detection and nested function calls https://bugs.webkit.org/show_bug.cgi?id=312101 rdar://174609179

Reviewed by Alan Baradlay (OOPS\!).

Various fixes.

* LayoutTests/imported/w3c/web-platform-tests/css/css-mixins/dashed-function-cycles-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-mixins/dashed-function-eval-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-mixins/function-attr-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-mixins/function-shadow-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-mixins/local-attr-substitution-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-mixins/local-if-substitution-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-mixins/parameter-types.tentative-expected.txt:
* Source/WebCore/style/PropertyCascade.cpp:
(WebCore::Style::PropertyCascade::functionResultProperty const):
* Source/WebCore/style/PropertyCascade.h:
* Source/WebCore/style/StyleBuilder.cpp:
(WebCore::Style::Builder::resolveFunctionResult):

Initialize m_currentProperty when resolving the result descriptor.

* Source/WebCore/style/StyleBuilderState.h:
(WebCore::Style::BuilderState::addGuardedFunctionContexts):

Helper to add parent context guards.

* Source/WebCore/style/StyleSubstitutionContext.h:
(WebCore::Style::GuardedSubstitutionContexts::addFunctionContextsFrom):
* Source/WebCore/style/StyleSubstitutionResolver.cpp:
(WebCore::Style::SubstitutionResolver::resolveAndRegisterDashedFunctionArguments):
(WebCore::Style::SubstitutionResolver::substituteDashedFunction):

Initialize element for nested style builder.
Pass guarded substitution contexts from parent to the nested builder.

Canonical link: https://commits.webkit.org/311178@main